--- a/app/src/main/res/layout/fragment_home_activity.xml
+++ b/app/src/main/res/layout/fragment_home_activity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".fragment.ListRoomFragment">
     <ListView
         android:id="@+id/list_room"
         android:layout_width="match_parent"
