--- a/app/src/main/res/layout/fragment_saved_activity.xml
+++ b/app/src/main/res/layout/fragment_saved_activity.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SavedActivity">
+    tools:context=".fragment.SavedFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
