--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -5,11 +5,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.FindActivity">
+    <View
+        android:id="@+id/topView"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view3"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="@drawable/ic_waveregis"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topView" />
+
+    <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="96dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="172dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="Hủy"
+        app:layout_constraintEnd_toStartOf="@+id/btnApply"
+        app:layout_constraintHorizontal_bias="0.587"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
+        android:background="@drawable/round_bg"/>
 
     <TextView
         android:id="@+id/txtOnclick"
         android:layout_width="90dp"
-        android:layout_height="22dp"
+        android:layout_height="32dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="104dp"
         android:textAlignment="center"
@@ -19,7 +50,7 @@
     <TextView
         android:id="@+id/txtBottom"
         android:layout_width="140dp"
-        android:layout_height="22dp"
+        android:layout_height="32dp"
         android:layout_marginStart="96dp"
         android:layout_marginTop="48dp"
         android:textAlignment="center"
@@ -42,7 +73,7 @@
         android:id="@+id/txtHeader"
         android:layout_width="312dp"
         android:layout_height="47dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="100dp"
         android:textAlignment="center"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,12 +85,14 @@
         android:id="@+id/btnApply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="172dp"
+        android:backgroundTint="@color/colorPrimary"
         android:text="Apply"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.702"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
+        android:background="@drawable/round_bg"/>
 
     <SeekBar
         android:id="@+id/seekBar2"
@@ -80,5 +113,15 @@
         app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtHeader" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/ic_wavebottom"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
