--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
     <androidx.viewpager.widget.ViewPager
 
         android:id="@+id/view_page"
-        android:layout_width="match_parent"
-        android:layout_height="658dp"
+        android:layout_width="411dp"
+        android:layout_height="684dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         app:layout_constraintBottom_toTopOf="@+id/tab_layout"
         app:layout_constraintEnd_toEndOf="parent"
