--- a/app/src/main/res/layout/fragment_account_activity.xml
+++ b/app/src/main/res/layout/fragment_account_activity.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etAccountR"
+        android:id="@+id/etAccount"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view3" />
 
     <EditText
-        android:id="@+id/etPasswordR"
+        android:id="@+id/etPassword"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
@@ -84,10 +84,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etAccountR" />
+        app:layout_constraintTop_toBottomOf="@+id/etAccount" />
 
     <Button
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -99,7 +99,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPasswordR" />
+        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
     <TextView
         android:id="@+id/tvForgot"
@@ -114,7 +114,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
     <TextView
         android:id="@+id/textView3"
