--- a/app/src/main/res/layout/fragment_account_activity.xml
+++ b/app/src/main/res/layout/fragment_account_activity.xml
@@ -79,7 +79,7 @@
         android:drawablePadding="16dp"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
@@ -167,5 +167,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
