--- a/app/src/main/res/layout/room_view.xml
+++ b/app/src/main/res/layout/room_view.xml
@@ -16,7 +16,6 @@
         android:layout_height="150dp"
         android:layout_weight="1"
         android:background="#FFFFFF"
-        android:contentDescription="TODO"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/apartment" />
 
@@ -51,7 +50,7 @@
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/tvHostNameV" />
 
         <TextView
             android:id="@+id/tvDes"
@@ -68,7 +67,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvHostNameV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -88,7 +87,7 @@
             android:layout_marginTop="10dp"
             android:textColor="#E91E63"
             android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toEndOf="@+id/tvHostNameV"
             app:layout_constraintTop_toBottomOf="@+id/tvDes" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
