--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -44,8 +44,9 @@
         android:layout_marginStart="91dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="91dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="Y?u C?u ?ang Nh?p"
+        android:text="Yêu Cầu Đăng Nhập"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -62,7 +63,7 @@
         android:layout_marginTop="17dp"
         android:layout_marginEnd="32dp"
         android:gravity="center"
-        android:text="Chua dang nh?p"
+        android:text="Bạn cần đăng nhập để sử dụng tính năng này"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
