--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    >
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.ReviewActivity">
@@ -10,7 +18,7 @@
         android:id="@+id/imgHostAvatar"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="44dp"
         android:src="@drawable/img1"
         app:civ_border_color="#FF000000"
@@ -18,13 +26,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <RatingBar
         android:id="@+id/ratingBar_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.163"
+        app:layout_constraintHorizontal_bias="0.43"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -33,61 +43,67 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="260dp"
-        android:layout_marginBottom="5dp"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/ratingBar_room"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imgHostAvatar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RatingBar
         android:id="@+id/ratingBar_room"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
         android:isIndicator="true"
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imgHostAvatar"
-        tools:layout_editor_absoluteY="79dp" />
+        app:layout_constraintTop_toBottomOf="@+id/tvRoomTitle"
+        app:layout_constraintVertical_bias="0.111" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="351dp"
         android:layout_height="53dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/comment_text"
         android:textColor="#121111"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgHostAvatar" />
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/userAvatar"
         android:layout_width="97dp"
-        android:layout_height="158dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/img1"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar_user" />
 
-
     <TextView
         android:id="@+id/tvUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="228dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/userAvatar"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar_user" />
 
@@ -95,38 +111,29 @@
         android:id="@+id/etComment"
         android:layout_width="256dp"
         android:layout_height="78dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:autofillHints="@string/hint_add_comment"
-        android:ems="10"
         android:hint="@string/hint_add_comment"
         android:inputType="textMultiLine"
         android:lines="8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.217"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/userAvatar"
         app:layout_constraintTop_toBottomOf="@+id/tvUserName" />
 
     <ListView
         android:id="@+id/list_review"
-        android:layout_width="363dp"
-        android:layout_height="198dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.583"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_delete" />
-
-    <Button
-        android:id="@+id/btn_delete"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="28dp"
-        android:text="@string/btn_delete"
-        app:layout_constraintEnd_toStartOf="@+id/btn_comment"
-        app:layout_constraintHorizontal_bias="0.983"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etComment" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_comment" />
 
     <Button
         android:id="@+id/btn_comment"
@@ -139,3 +146,4 @@
         app:layout_constraintTop_toBottomOf="@+id/etComment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
