--- a/app/src/main/res/layout/slides_layout.xml
+++ b/app/src/main/res/layout/slides_layout.xml
@@ -11,16 +11,17 @@
         android:layout_width="0dp"
         android:layout_height="380dp"
         android:padding="30dp"
-        app:srcCompat="@drawable/seo"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/seo" />
 
     <TextView
         android:id="@+id/slider_heading"
         android:layout_width="292dp"
         android:layout_height="54dp"
-        android:layout_marginStart="167dp"
-        android:layout_marginEnd="186dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:text="TextView"
@@ -33,10 +34,10 @@
         android:id="@+id/slider_desc"
         android:layout_width="342dp"
         android:layout_height="86dp"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="186dp"
-        android:layout_marginBottom="252dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="monospace"
         android:gravity="center"
         android:text="@string/first_slide_desc"
