--- a/app/src/main/res/layout/fragment_profilefragment.xml
+++ b/app/src/main/res/layout/fragment_profilefragment.xml
@@ -60,11 +60,13 @@
 
 
         <TextView
-            android:id="@+id/etEmail"
+            android:id="@+id/etUsername"
             android:layout_width="315dp"
             android:layout_height="54dp"
-            android:layout_marginTop="24dp"
-            android:drawableStart="@drawable/ic_email"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="40dp"
+            android:drawableStart="@drawable/ic_username"
             android:padding="10dp"
             android:textAlignment="center"
             android:textSize="24sp"
@@ -73,10 +75,27 @@
             app:layout_constraintTop_toBottomOf="@+id/view3" />
 
         <TextView
+            android:id="@+id/etEmail"
+            android:layout_width="315dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="40dp"
+            android:drawableStart="@drawable/ic_email"
+            android:padding="10dp"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etUsername" />
+
+        <TextView
             android:id="@+id/etPhone"
             android:layout_width="315dp"
             android:layout_height="54dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="40dp"
             android:drawableStart="@drawable/ic_phone"
             android:padding="10dp"
             android:textAlignment="center"
@@ -87,14 +106,14 @@
 
         <Button
             android:id="@+id/btnLogout"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00000000"
             android:backgroundTint="@color/colorPrimary"
             android:drawableEnd="@drawable/ic_logout"
-            style="?android:attr/borderlessButtonStyle"
-            android:background="#00000000"
-            android:text="LogOut"
             android:onClick="logout"
+            android:text="LogOut"
             android:textColor="#FFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.948"
