connect DetailActivity.java with other activity

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -21,29 +21,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <Button
+                    android:id="@+id/btnComment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="344dp"
+                    android:text="Button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <TextView
                     android:id="@+id/txtDetail"
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="36dp"
+                    android:layout_width="372dp"
+                    android:layout_height="133dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginEnd="108dp"
+                    android:gravity="start"
                     android:text="Cho thuê phòng ngủ trong căn hộ \n    + Vị trí gần chợ, thuận tiện đi các quận trung tâm và đường rộng ít kẹt xe \n   + Phòng ốc rộng đẹp có thể ở 2 người \n Có thể sử dụng toàn bộ không gian phòng khách phòng bếp \n   + Giá điện nhà nước \n Free nước, free wifi "
                     android:textColor="#000333"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
                 <TextView
                     android:id="@+id/textView9"
-                    android:layout_width="90dp"
-                    android:layout_height="26dp"
-                    android:layout_marginStart="26dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="316dp"
+                    android:layout_width="103dp"
+                    android:layout_height="17dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="28dp"
+                    android:gravity="center_vertical"
                     android:text="Mô tả chi tiết"
                     android:textColor="#1D7ECC"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/googleMapImg" />
 
@@ -53,14 +63,12 @@
                     android:layout_height="35dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="25dp"
                     android:drawableStart="@drawable/ic_baseline_apartment_24"
+                    android:gravity="center_vertical"
                     android:paddingStart="5dp"
                     android:text="  Diện tích 21m2"
                     android:textColor="#333"
                     android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.476"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtContact" />
 
@@ -70,13 +78,12 @@
                     android:layout_height="35dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginEnd="25dp"
                     android:drawableStart="@drawable/ic_baseline_contact_phone_24"
+                    android:gravity="center_vertical"
                     android:paddingStart="5dp"
                     android:text="  +84 98 577 94 94 - Cao Trọng Vĩnh"
                     android:textColor="#333"
                     android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtAddress" />
 
@@ -86,13 +93,12 @@
                     android:layout_height="35dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginEnd="25dp"
                     android:drawableStart="@drawable/ic_baseline_house_24"
+                    android:gravity="center_vertical"
                     android:paddingStart="5dp"
                     android:text="  Hẻm 496/9 Dương Quảng Hàm, phường 6, Gò Vấp, Thành phố Hà Nội, Việt Nam"
                     android:textColor="#333"
                     android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
@@ -117,12 +123,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginEnd="72dp"
-                    android:text="Phòng tại 496/9/34J Dương Quảng Hàm"
+                    android:gravity="center_vertical"
+                    android:text="aaaaaa"
                     android:textColor="#1D7ECC"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/carouselView" />
 
@@ -132,6 +137,7 @@
                     android:layout_height="250dp"
                     android:layout_marginTop="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtMap"
                     tools:srcCompat="@tools:sample/avatars" />
@@ -143,6 +149,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="340dp"
+                    android:gravity="center_vertical"
                     android:text="Bản Đồ"
                     android:textColor="#1D7ECC"
                     android:textSize="16sp"
@@ -174,7 +181,6 @@
         android:layout_marginBottom="20dp"
         android:background="@drawable/button_maps"
         android:gravity="center_horizontal"
-        android:onClick="onButtonMoreClick"
         android:shadowColor="#000000"
         android:text="..."
         android:textAlignment="gravity"
@@ -193,6 +199,7 @@
         android:layout_marginTop="6dp"
         android:backgroundTint="#00000000"
         android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
+        android:onClick="onButtonBackClick"
         android:text="" />
 
     <TextView
@@ -200,14 +207,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="150dp"
+        android:layout_marginStart="135dp"
         android:layout_marginTop="12dp"
+        android:gravity="center_vertical"
         android:stateListAnimator="@null"
         android:text="3,3 triệu/tháng"
-        android:textAlignment="center"
         android:textColor="#1D7ECC"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btnSave"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="59dp"
+        android:layout_height="37dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="350dp"
+        android:layout_marginTop="6dp"
+        android:backgroundTint="#00000000"
+        android:text="" />
 
 
 </RelativeLayout>
